# FinGuard-AI

./: .gitignore  LICENSE  README.md  config.py  main.py  pyproject.toml  test.ipynb
